--- a/admin/src/app/pages/customers/customer-detail/customer-detail-basic/customer-detail-basic.component.html
+++ b/admin/src/app/pages/customers/customer-detail/customer-detail-basic/customer-detail-basic.component.html
@@ -8,7 +8,8 @@
                         'assets/images/no-image.jpg'" alt="" class="d-block w-100">
                 </div>
                 <div class="col-lg-7 mt-4">
-                    <h6>{{account.email}}</h6>
+                    <h6>Email: {{account.email}}</h6>
+                    <h6>Username: {{account.username}}</h6>
                     <p><span class="font-weight-bold">Full Name: </span>{{account.fullName}}</p>
                     <p><span class="font-weight-bold">Phone Number: </span>{{account.phoneNumber}}</p>
                     <div class="row d-flex pl-3">
