--- a/admin/src/app/pages/dashboard/dashboard.component.html
+++ b/admin/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,10 @@
 <div class="row">
+  <div class="row">
+    <div class="col-xxxl-3 col-md-6" *ngFor="let statusCard of statusCards">
+      <ngx-status-card [title]="statusCard.title" [type]="statusCard.type">
+        <nb-icon [ngClass]="statusCard.iconClass" [icon]="statusCard.iconClass" style="font-size:3rem"></nb-icon>
+      </ngx-status-card>
+    </div>
   <div class="col-xxl-7">
     <ngx-ecommerce-charts></ngx-ecommerce-charts>
   </div>
