--- a/demo28/src/app/shared/components/product/product-twelve/product-twelve.component.html
+++ b/demo28/src/app/shared/components/product/product-twelve/product-twelve.component.html
@@ -26,7 +26,7 @@
     </h3>
 
     <div class="product-price font-weight-bold align-items-center d-flex mb-0">
-      ${{minPrice.toFixed(2)}}&ndash;${{maxPrice.toFixed(2)}}</div>
+      ${{minPrice}}&ndash;${{maxPrice}}</div>
   </div>
 
   <!-- <ng-template #elseBlock>
