--- a/demo28/src/app/pages/home/index/index.component.html
+++ b/demo28/src/app/pages/home/index/index.component.html
@@ -138,7 +138,7 @@
       </div>
     </div>
   </div>
-  <!-- <div class="container">
+  <div class="container">
     <hr class="m-0">
     <div class="cat-section mt-4 mb-3" contentAnim aniName="fadeInUpShorter">
       <div class="row">
@@ -241,7 +241,7 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
   <molla-trendy-collection [products]="featuredProducts" [loaded]="loaded"></molla-trendy-collection>
 
   <div class="brand-section mt-3 mb-4">
