--- a/demo28/src/app/pages/shop/cart/cart.component.html
+++ b/demo28/src/app/pages/shop/cart/cart.component.html
@@ -65,11 +65,11 @@
                                             {{ ( product.sale ? product.productVariant.price.toFixed( 2 ) : product.productVariant.price.toFixed( 2 ) ) | currency }}
                                         </td>
                                         <td class="quantity-col">
-                                            <molla-quantity-input adClass="cart-product-quantity" [value]="product.productVariant.quantity"
+                                            <molla-quantity-input adClass="cart-product-quantity" [value]="product.quantity"
                                                 [max]="product.stock" (changeQty)="onChangeQty( $event, product )">
                                             </molla-quantity-input>
                                         </td>
-                                        <td class="total-col">{{ product.productVariant.quantity * product.productVariant.price | currency }}</td>
+                                        <td class="total-col">${{ (product.sum)  }}</td>
                                         <td class="remove-col"><button class="btn-remove"
                                                 (click)="cartService.removeFromCart( product )"><i
                                                     class="icon-close"></i></button></td>
