--- a/demo28/src/app/shared/components/headers/shared/cart-menu/cart-menu.component.html
+++ b/demo28/src/app/shared/components/headers/shared/cart-menu/cart-menu.component.html
@@ -1,5 +1,5 @@
 <div class="dropdown cart-dropdown">
-    <a href="javascript:;" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
+    <a routerLink="/shop/cart" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
         aria-expanded="false" data-display="static">
         <div class="icon position-relative">
             <i class="icon-shopping-cart"></i>
