--- a/demo28/src/app/shared/components/headers/header/header.component.html
+++ b/demo28/src/app/shared/components/headers/header/header.component.html
@@ -1,31 +1,8 @@
 <header class="header header-28 bg-transparent">
     <div class="promo-top w-100 h-auto text-center" style="background-image: url(assets/images/home/promo.jpg); background-color: #87bbc7;">
-        <h4 class="font-weight-normal text-uppercase text-white m-0">Free Shipping For All Orders Over $50</h4>
     </div>
     <div class="header-top font-weight-normal text-light">
         <div [ngClass]="containerClass">
-            <div class="header-left">
-                <div class="header-dropdown">
-                    <a href="javascript:;">Usd</a>
-                    <div class="header-menu">
-                        <ul>
-                            <li><a href="javascript:;">Eur</a></li>
-                            <li><a href="javascript:;">Usd</a></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="header-dropdown">
-                    <a href="javascript:;">Eng</a>
-                    <div class="header-menu">
-                        <ul>
-                            <li><a href="javascript:;">English</a></li>
-                            <li><a href="javascript:;">French</a></li>
-                            <li><a href="javascript:;">Spanish</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
 
             <div class="header-right">
                 <ul class="top-menu">
@@ -33,10 +10,7 @@
                         <a href="javascript:;">Links</a>
                         <ul>
                             <li><a href="tel:#"><i class="icon-phone"></i>Call: +0123 456 789</a></li>
-                            <li><molla-compare-menu></molla-compare-menu></li>
-                            <li><a routerLink="/pages/about">About Us</a></li>
-                            <li><a routerLink="/pages/contact">Contact Us</a></li>
-                            <li><a href="javascript:;" (click)="showLoginModal($event)"><i class="icon-user"></i>Login</a></li>
+                            <li><a href="javascript:;" (click)="showLoginModal($event)"><i class="icon-user"></i>Login / Register</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -50,7 +24,7 @@
                     <molla-mobile-button></molla-mobile-button>
 
                     <a routerLink="/" class="logo">
-                        <img src="assets/images/home/logo.png" alt="Molla Logo" width="105" height="25">
+                        <img src="assets/images/home/logo.png" alt="PlantNest" width="200" height="30">
                     </a>
 
                     <molla-main-menu></molla-main-menu>
