--- a/demo28/src/app/shared/components/headers/shared/main-menu/main-menu.component.html
+++ b/demo28/src/app/shared/components/headers/shared/main-menu/main-menu.component.html
@@ -1,294 +1,7 @@
 <nav class="main-nav">
     <ul class="menu sf-arrows">
         <li class="megamenu-container" [class.active]="current=='/'">
-            <a routerLink="/" class="sf-with-ul">Home</a>
-
-            <div class="megamenu demo">
-                <div class="menu-col">
-                    <div class="menu-title">Choose your demo</div>
-
-                    <div class="demo-list">
-                        <div class="demo-item">
-                            <a href="https://d-themes.com/angular/molla/demo1">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/1.jpg)"></span>
-                                <span class="demo-title">01 - furniture store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item">
-                            <a href="https://d-themes.com/angular/molla/demo2">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/2.jpg)"></span>
-                                <span class="demo-title">02 - furniture store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item">
-                            <a href="https://d-themes.com/angular/molla/demo3">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/3.jpg)"></span>
-                                <span class="demo-title">03 - electronic store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item">
-                            <a href="https://d-themes.com/angular/molla/demo4">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/4.jpg)"></span>
-                                <span class="demo-title">04 - electronic store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item">
-                            <a href="https://d-themes.com/angular/molla/demo5">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/5.jpg)"></span>
-                                <span class="demo-title">05 - fashion store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item">
-                            <a href="https://d-themes.com/angular/molla/demo6">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/6.jpg)"></span>
-                                <span class="demo-title">06 - fashion store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item">
-                            <a href="https://d-themes.com/angular/molla/demo7">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/7.jpg)"></span>
-                                <span class="demo-title">07 - fashion store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item">
-                            <a href="https://d-themes.com/angular/molla/demo8">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/8.jpg)"></span>
-                                <span class="demo-title">08 - fashion store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item">
-                            <a href="https://d-themes.com/angular/molla/demo9">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/9.jpg)"></span>
-                                <span class="demo-title">09 - fashion store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item">
-                            <a href="https://d-themes.com/angular/molla/demo10">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/10.jpg)"></span>
-                                <span class="demo-title">10 - shoes store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo11">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/11.jpg)"></span>
-                                <span class="demo-title">11 - furniture simple store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo12">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/12.jpg)"></span>
-                                <span class="demo-title">12 - fashion simple store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo13">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/13.jpg)"></span>
-                                <span class="demo-title">13 - market</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo14">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/14.jpg)"></span>
-                                <span class="demo-title">14 - market fullwidth</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo15">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/15.jpg)"></span>
-                                <span class="demo-title">15 - lookbook 1</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo16">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/16.jpg)"></span>
-                                <span class="demo-title">16 - lookbook 2</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo17">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/17.jpg)"></span>
-                                <span class="demo-title">17 - fashion store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo18">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/18.jpg)"></span>
-                                <span class="demo-title">18 - fashion store (with sidebar)</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo19">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/19.jpg)"></span>
-                                <span class="demo-title">19 - games store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo20">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/20.jpg)"></span>
-                                <span class="demo-title">20 - book store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo21">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/21.jpg)"></span>
-                                <span class="demo-title">21 - sport store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo22">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/22.jpg)"></span>
-                                <span class="demo-title">22 - tools store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo23">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/23.jpg)"></span>
-                                <span class="demo-title">23 - fashion left navigation store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo24">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/24.jpg)"></span>
-                                <span class="demo-title">24 - extreme sport store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo25">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/25.jpg)"></span>
-                                <span class="demo-title">25 - jewelry store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo26">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/26.jpg)"></span>
-                                <span class="demo-title">26 - market store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo27">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/27.jpg)"></span>
-                                <span class="demo-title">27 - fashion store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo28">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/28.jpg)"></span>
-                                <span class="demo-title">28 - food market store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo29">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/29.jpg)"></span>
-                                <span class="demo-title">29 - t-shirts store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo30">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/30.jpg)"></span>
-                                <span class="demo-title">30 - headphones store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo31">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/31.jpg)"></span>
-                                <span class="demo-title">31 - yoga store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo32">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/32.jpg)"></span>
-                                <span class="demo-title">32 - sunglasses store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo33">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/33.jpg)"></span>
-                                <span class="demo-title">33 - cosmetics store</span>
-                            </a>
-                        </div>
-
-                        <div class="demo-item hidden">
-                            <a href="https://d-themes.com/angular/molla/demo34">
-                                <span class="demo-bg"
-                                    style="background-image: url(assets/images/menu/demos/34.jpg)"></span>
-                                <span class="demo-title">34 - car parts</span>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="megamenu-action text-center">
-                        <a href="#" class="btn btn-outline-primary-2 view-all-demos" (click)="viewAllDemos($event)">
-                            <span>View All Demos</span>
-                            <i class="icon-long-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
+            <a routerLink="/">Home</a>
         </li>
         <li [class.active]="current.includes('/shop')">
             <a routerLink="/shop/sidebar/list" class="sf-with-ul">Shop</a>
