--- a/demo28/src/app/pages/others/info/info.component.html
+++ b/demo28/src/app/pages/others/info/info.component.html
@@ -1,17 +1,18 @@
-<div class="container">
+<div class="container mt-3 mb-3">
+    <h1>Update Infomation</h1>
     <form>
       <!-- 2 column grid layout with text inputs for the first and last names -->
       <div class="row mb-3">
         <div class="col">
           <div class="form-outline">
+              <label class="form-label" for="form6Example1">First name</label>
             <input type="text" id="form6Example1" class="form-control" />
-            <label class="form-label" for="form6Example1">First name</label>
           </div>
         </div>
         <div class="col">
           <div class="form-outline">
+              <label class="form-label" for="form6Example2">Last name</label>
             <input type="text" id="form6Example2" class="form-control" />
-            <label class="form-label" for="form6Example2">Last name</label>
           </div>
         </div>
       </div>
@@ -19,20 +20,20 @@
      
       <!-- Text input -->
       <div class="form-outline mb-3">
+          <label class="form-label" for="form6Example4">Address</label>
         <input type="text" id="form6Example4" class="form-control" />
-        <label class="form-label" for="form6Example4">Address</label>
       </div>
   
       <!-- Email input -->
       <div class="form-outline mb-3">
+          <label class="form-label" for="form6Example5">Email</label>
         <input type="email" id="form6Example5" class="form-control" />
-        <label class="form-label" for="form6Example5">Email</label>
       </div>
   
       <!-- Number input -->
       <div class="form-outline mb-3">
+          <label class="form-label" for="form6Example6">Phone</label>
         <input type="number" id="form6Example6" class="form-control" />
-        <label class="form-label" for="form6Example6">Phone</label>
       </div>
   
       <!-- Submit button -->
