--- a/demo28/src/app/pages/others/about-two/about-two.component.html
+++ b/demo28/src/app/pages/others/about-two/about-two.component.html
@@ -9,7 +9,7 @@
                 <li class="breadcrumb-item">
                     <a href="javascript:;">Pages</a>
                 </li>
-                <li class="breadcrumb-item active">About Us 2</li>
+                <li class="breadcrumb-item active">About Us</li>
             </ol>
         </div>
     </nav>
@@ -24,9 +24,9 @@
                             nunc tortor eu nibh. Suspendisse potenti. Sed egestas, ante et vulputate volutpat, uctus
                             metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id,
                             est. Sed lectus. Praesent elementum hendrerit tortor. Sed semper lorem at felis. </p>
-                        <img src="assets/images/about/about-2/signature.png" alt="signature" class="mx-auto mb-5">
+                        <img src="assets/images/about/about.png" alt="signature" class="mx-auto mb-5">
 
-                        <molla-image src="assets/images/about/about-2/img-1.jpg" width="933" height="390" alt="signature"
+                        <molla-image src="https://plnts.com/_next/image?url=https%3A%2F%2Fplnts-api.ams3.digitaloceanspaces.com%2Fmain%2F95d58956bd39c8993372e1e6f905009f.jpg&w=1920&q=80" width="933" height="390" alt="signature"
                             class="mx-auto w-100 mb-6"></molla-image>
                     </div>
                 </div>
@@ -48,7 +48,7 @@
         <div class="mb-2"></div>
 
         <div class="bg-image pt-7 pb-5 pt-md-12 pb-md-9"
-            style="background-image: url(assets/images/backgrounds/bg-4.jpg)">
+            style="background-image: url(https://plnts.com/_next/image?url=https%3A%2F%2Fplnts-api.ams3.digitaloceanspaces.com%2Fmain%2Fbf0a8b4de140c7b96ea08f1088a63aeb.jpg&w=1920&q=80)">
             <div class="container">
                 <div class="row">
                     <div class="col-6 col-md-3" *ngFor="let counter of counters;">
